--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
 <p><input type="text" name="note_A1" style="" placeholder='Note.. '></p>
+	<textarea class="border-2 border-red-600 w-24" placeholder="Describe you desired feature. Be descriptive!" \></textarea>
 </div>
 <button class="accordion2"><strong>A.2</strong> Presenza di Verbale di Coordinamento</button>
 <div class="panel">
