--- a/index.html
+++ b/index.html
@@ -159,7 +159,22 @@ input[type=text]::placeholder {
 
 
 </style>
+<style>
+.text_area {
+  width: 100%;
+  padding: 14px;
+  margin: 10px 0;
+  border: 2px;
+  border-radius: 8px;
+  background: var(--blanc);
+  color: var(--background);
+  box-shadow: inset 0px 2px 5px var(--shadow-dark);
+  font-size: 16px;
+  outline: none;
+}
 
+
+</style>
 <style>
     /* Stile per i canvas della firma */
     .signature-pad {
@@ -265,8 +280,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A1" style="" placeholder='Note.. '></p>
-	<textarea class="border-2 border-red-600 w-24" placeholder="Describe you desired feature. Be descriptive!" \></textarea>
+	<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>A.2</strong> Presenza di Verbale di Coordinamento</button>
 <div class="panel">
@@ -276,7 +290,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -293,7 +307,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>B.2</strong> Schema segnaletico cantiere (conforme al Disciplinare)</button>
 <div class="panel">
@@ -303,7 +317,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>B.3</strong> Qualita' della segnaletica (abbattuta, ammalorata, non visibile ecc.)</button>
 <div class="panel">
@@ -313,7 +327,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -331,7 +345,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A1" style="width=50vw;" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -349,7 +363,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>D.2</strong> Cassetta P.S. e attrezzature antincendio </button>
 <div class="panel">
@@ -359,7 +373,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -378,7 +392,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -395,7 +409,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -413,7 +427,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>G.2</strong> Personale al di fuori del raggio di azione delle macchine in movimento e carichi sospesi </button>
 <div class="panel">
@@ -423,7 +437,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>G.3</strong> Possesso di abilitazione/formazione per operatore mezzi speciali</button>
 <div class="panel">
@@ -433,7 +447,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>G.4</strong>  Mezzi d'opera e di sollevamento operano con stabilizzatori aperti onde evitare l’inclinarsi, il ribaltamento, lo spostamento e lo scivolamento del mezzo</button>
 <div class="panel">
@@ -443,7 +457,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>G.5</strong> Efficienza dispositivi luminosi / sonori</button>
 <div class="panel">
@@ -453,7 +467,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -471,7 +485,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>H.2</strong>  Delimitazione dell'area di cantiere correttamente installata</button>
 <div class="panel">
@@ -481,7 +495,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>H.3</strong> Disordine / pulizia carente area di cantiere - housekeeping / possibile proiezione e caduta di materiali da ponti, viadotti etc</button>
 <div class="panel">
@@ -491,7 +505,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>H.4</strong>  Aree di deposito mezzi/attrezzature/materiali/sostanze correttamente delimitate e gestite, corretta gestione delle sostante pericolose, corretta gestione dei rifiuti (delimitazione e segregazione aree, codici CER, etc)</button>
 <div class="panel">
@@ -501,7 +515,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>H.5</strong> Installazione del ponteggio</button>
 <div class="panel">
@@ -511,7 +525,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -529,7 +543,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>I.2</strong> Interferenze con le linee elettriche aeree, servizi e sottoservizi opportunamente segnalate e gestite.Interferenze con le lavorazioni opportunamente gestite</button>
 <div class="panel">
@@ -539,7 +553,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 <button class="accordion2"><strong>I.3</strong>  Rispetto delle procedure di lavoro con riferimento alle prescrizioni normative e standard ASPI (Linee Guida Operatore su strada, protocolli operativi, etc)</button>
 <div class="panel">
@@ -549,7 +563,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 
@@ -567,7 +581,7 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAwcAAAJlCAYAAACPE46qAAAAAXNSR
     <option value="Osservazione">Osservazione</option>
 	<option value="NA | NV">N.A. | N.V.</option>
     </select></p>
-<p><input type="text" name="note_A2" placeholder="Note... "></p>
+<textarea class="text_area" placeholder="Note..." style="width:100%;" \></textarea>
 </div>
 </div>
 </div>
