--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 body {
   gap: 1rem;
   margin: 5% 0;
-  padding: 1rem;
+  padding: 2rem;
   color: var(--text);
   background: var(--background);
   font-family: "Inter", sans-serif;
@@ -223,8 +223,115 @@ input[type=text]::placeholder {
 	.file-input-container{padding-top:16px;padding-bottom:16px;}
 </style>
 
+<style>
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: #0f1722;
+      color: white;
+      position: relative;
+      z-index: 2;
+    }
+
+    .logo {
+      background-color: #0f1722;
+      color: white;
+      font-weight: bold;
+      padding: 10px 15px;
+      font-size: 20px;
+    }
+
+    .menu-toggle {
+      font-size: 28px;
+      cursor: pointer;
+      display: none;
+      color: white;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .right-link {
+      font-weight: bold;
+      color: white;
+    }
+
+    /* Mobile Style */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        background-color: #0f1722;
+        padding: 20px;
+      }
+
+      .nav-links.show {
+        display: flex;
+      }
+
+      .nav-links li {
+        margin-bottom: 15px;
+      }
+
+      .nav-links li a {
+        font-size: 24px;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: white;
+      }
+
+      .nav-links li a::after {
+        content: " /";
+        margin-left: 5px;
+      }
+
+      .right-link {
+        display: none;
+      }
+    }
+  </style>
+
+
 </head>
 <body>
+  <nav class="navbar">
+    <div class="logo">IBS Progetti</div>
+    <div class="menu-toggle" onclick="toggleMenu()">&#47;&#47;</div> <!-- "//" icon -->
+    <ul class="nav-links" id="navLinks">
+      <li><a href="index.html">CHECK LIST</a></li>
+      <li><a href="#">SOPRALLUOGO</a></li>
+    </ul>
+    <div class="right-link">INDUSTRY HUB</div>
+  </nav>
+
+
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById("navLinks");
+      nav.classList.toggle("show");
+    }
+  </script>
 
 <div style="background-color:var(--accordion); padding:2%;border-radius:2%;">
 <h2 style="justify-content: space-between;gap: 1rem;display: flex;border-bottom: 4px solid var(--background);font-size: clamp(40px, 8.3333333333vw, 80px);font-family: 'FoundersGroteskCond', 'Arial Narrow', sans-serif;text-transform: uppercase;font-weight: 800;color:var(--background);">
