--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@ input[type=text]::placeholder {
     <div class="menu-toggle" onclick="toggleMenu()">&#47;&#47;</div> <!-- "//" icon -->
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">CHECK LIST</a></li>
-      <li><a href="#">SOPRALLUOGO</a></li>
+      <li><a href="sop.html">SOPRALLUOGO</a></li>
     </ul>
-    <div class="right-link">INDUSTRY HUB</div>
+    <div class="right-link">//</div>
   </nav>
 
 
