--- a/sop.html
+++ b/sop.html
@@ -319,6 +319,8 @@ th, td, div {
                 <canvas class="signature-pad" id="signaturePad2"></canvas>
                 <p><button onclick="clearSignature(2)" style="width:100%;background-color:#C70039">Cancella Firma</button></p>
             </div>
+		</div>
+		<div class="signature-container">
             <div class="signature-box">
                 <p>Firma Ditta</p>
                 <canvas class="signature-pad" id="signaturePad3"></canvas>
@@ -479,8 +481,8 @@ th, td, div {
                 doc.text("Committente:", 10, 25);
                 doc.text("Autostrade per l’Italia S.p.A. (C.F./P.IVA 07516911000), società soggetta all’attività di direzione e coordinamento da parte di Holding Reti Autostradali S.p.A., Direzione di Tronco di Firenze con sede in Via Limite - 50013 Campi Bisenzio (FI)", 10, 30, { maxWidth: 190 });
                 doc.text("RL: Ing. Giuseppe D’Elia – Autostrade per l’Italia Spa - Via di Limite SNC - 50013 Campi Bisenzio (FI) - Tel. 055 42031", 10, 40, { maxWidth: 190 });
-                doc.text("DL: Ing. Luca Bari (CF: BRALCU64B10C608H) – Via Andrea del Sarto 24 – 50135 Firenze (FI) – mail: luca.bari.ing@gmail.com - cell: +39 327 5799155", 10, 50, { maxWidth: 190 });
-                doc.text("CSE: Ing. Luca Bari (CF: BRALCU64B10C608H) – Via Andrea del Sarto 24 – 50135 Firenze (FI) – mail: luca.bari.ing@gmail.com - cell: +39 327 5799155", 10, 60, { maxWidth: 190 });
+                doc.text("DL: Ing. Fabrizio Braconi (CF: BRCFRZ70S10I726D) – Viale G. Baccelli, 23, Chianciano Terme (SI) – mail: fabriziobraconi@ibsprogetti.it - cell: +39 393 333 9820", 10, 50, { maxWidth: 190 });
+                doc.text("CSE: Ing. Fabrizio Braconi (CF: BRCFRZ70S10I726D) – Viale G. Baccelli, 23, Chianciano Terme (SI)) – mail: luca.bari.ing@gmail.com - cell: +39 393 333 9820", 10, 60, { maxWidth: 190 });
             }
 
             // Data e ora
