--- a/sop.html
+++ b/sop.html
@@ -111,7 +111,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px 20px;
-      background-color: #0f1722;
+      background-color: var(--background);
       color: white;
       position: relative;
       z-index: 2;
