--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ input[type=text]::placeholder {
       justify-content: space-between;
       align-items: center;
       padding: 10px 20px;
-      background-color: #0f1722;
+      background-color: var(--background);
       color: white;
       position: relative;
       z-index: 2;
