--- a/fcop.html
+++ b/fcop.html
@@ -772,7 +772,7 @@ console.log(csvText);
     "dl": "Ing. Fabrizio Braconi",
     "cse": "Ing. Fabrizio Braconi",
     "tipologia": "Lavori di manutenzione straordinaria e realizzazione data center",
-    "titolo_abilitativo": "Prot. CU:CU2025/99949",
+    "titolo_abilitativo": "Prot. CIL:CU2025/99949",
     "impresa_appaltatrice": "Installazioni Impianti S.P.A."
   }
 }
