Remove date from footer text in fcop.html

--- a/fcop.html
+++ b/fcop.html
@@ -1128,7 +1128,7 @@ for (let i = 1; i <= totalPages; i++) {
   centerText('Sede Legale - Sede Operativa: Viale Baccelli, 23 - 53042 Chianciano Terme (SI)', 280);
   centerText('Cod. Fiscale e P. IVA 00984920520    -    Tel. 0578/62616-61332 Fax 0578/654582    -    www.ibsprogetti.it', 285);
   
-  centerText(`Pagina ${i} | Data: ${date}`, 290);
+  centerText(`Pagina ${i}`, 290);
 }
 
 
