Fix formatting of JSON properties in fcop.html

--- a/fcop.html
+++ b/fcop.html
@@ -775,7 +775,7 @@ console.log(csvText);
     "tipologia": "Lavori di manutenzione straordinaria e realizzazione data center",
     "titolo_abilitativo": "Prot. CIL :CU2025/99949",
     "impresa_appaltatrice": "Installazioni Impianti S.P.A.",
-	"redattore":"Ing. Diego Rizzardini"
+    "redattore": "Ing. Diego Rizzardini"
   },
   "Pietralata": {
     "nome_sito": "Pietralata Via Feronia 96",
@@ -785,8 +785,8 @@ console.log(csvText);
     "cse": "Ing. Fabrizio Braconi",
     "tipologia": "Lavori di manutenzione straordinaria delle facciate",
     "titolo_abilitativo": "NON C'è ANCORA",
-    "impresa_appaltatrice": "Installazioni Impianti S.P.A."
-	"redattore":"Ing. Alessandro Ascione"
+    "impresa_appaltatrice": "Installazioni Impianti S.P.A.",
+    "redattore": "Ing. Alessandro Ascione"
   }
 }
 
