--- a/fcop.html
+++ b/fcop.html
@@ -316,13 +316,15 @@ input[type=text]::placeholder {
 
 
 </head>
- <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-  <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#datepicker" ).datepicker();
-  } );
-  </script>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
+<script>
+$(function() {
+    $("#datepicker").datepicker({
+        dateFormat: 'dd/mm/yy'
+    });
+});
+</script>
 <body>
   <nav class="navbar">
     <div class="logo">IBS Progetti</div>
