Fix input elements in fcop.html

--- a/fcop.html
+++ b/fcop.html
@@ -384,8 +384,8 @@ src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAy4AAACwCAYAAADpNzoFAAAgAElEQ
 <p>
   Data e Ora:
   <div style="display: flex; gap: 10px; align-items: center;">
-  <input type="text" id="datepicker" placeholder="Seleziona data" style="width: 50%!important";>
-  <input type="number" id="timepicker" placeholder="Ora" style="width: 50%!important";>
+  <input type="text" id="datepicker" placeholder="Seleziona data" style="width: 50%!important">
+  <input type="number" id="timepicker" placeholder="Ora" style="width: 50%!important">
   </div>
 </p>
 <p style= "color:var(--background);">Impresa Subappaltatrice <input type="text" id="subappalto" placeholder="Nome Impresa"></p>
