Fix formatting of 'titolo_abilitativo' fields

--- a/fcop.html
+++ b/fcop.html
@@ -795,7 +795,7 @@ console.log(csvText);
     "dl": "Ing. Fabrizio Braconi",
     "cse": "Ing. Fabrizio Braconi",
     "tipologia": "Lavori di manutenzione straordinaria e realizzazione data center",
-    "titolo_abilitativo": "Prot. CIL :CU2025/99949",
+    "titolo_abilitativo": "Prot. CIL: CU 2025/99949",
     "impresa_appaltatrice": "Installazioni Impianti S.P.A.",
     "redattore": "Ing. Diego Rizzardini"
   },
@@ -806,7 +806,7 @@ console.log(csvText);
     "dl": "Ing. Fabrizio Braconi",
     "cse": "Ing. Fabrizio Braconi",
     "tipologia": "Lavori di manutenzione straordinaria delle facciate",
-    "titolo_abilitativo": "NON C'è ANCORA",
+    "titolo_abilitativo": "CIL: CE 2025/152068",
     "impresa_appaltatrice": "Installazioni Impianti S.P.A.",
     "redattore": "Ing. Alessandro Ascione"
   }
